# ProjectAlpha

./: LICENSE  README.md  compare_runs.py  list_runs.py  main.py  pyproject.toml  replay_run.py  requirements-dev.txt  requirements-optimizer.txt  requirements-parquet.txt  requirements-postgres.txt  requirements.txt
docs/: DSL_GUIDE.md  RUNBOOK.md  TODO.md
docs/updates/: P0_5_DSL_UPDATE.md  P0_HARDENING.md  P0_IMPLEMENTATION.md  P0_PLAN.md  P1_IMPLEMENTATION.md  P2_10_ROBUST_RISK_ESTIMATION.md  P2_11_EXPLAINABILITY_REPORTS.md  P2_12_TUNING_ABLATION_GATES.md  P2_13_EXECUTION_ONLY_ABLATION.md  P2_14_COST_SENSITIVITY.md  P2_15_DECAY_ANALYSIS.md  P2_16_HOLDING_REBALANCE_SWEEP.md  P2_17_DIVERSITY_ENSEMBLE.md  P2_18_HOLDINGS_ENSEMBLE.md  P2_19_ALPHA_ALLOCATION.md  P2_20_ALPHA_ALLOCATION_META_TUNING.md  P2_21_REGIME_AWARE_ALLOCATION.md  P2_22_SELECTION_META_TUNING.md  P2_23_REGIME_META_TUNING.md  P2_24_REGIME_HOLDINGS_REVALIDATION.md  P2_25_BPS_OBJECTIVE_PARETO.md  P2_26_CONSTRAINED_SELECTION.md  P2_27_PARETO_PRESETS_PLOTS.md  P2_28_PARETO_AUTO_SELECTION.md  P2_29_SELECTION_REPORT_CALIBRATION.md  P2_2_IMPLEMENTATION.md  P2_30_ALPHA_SELECTION_REPORT.md  P2_31_ALPHA_SELECTION_CONSTRAINTS.md  P2_32_DSL_FORMULA_SANITY.md  P2_33_DSL_GROUP_NEUTRALIZATION.md  P2_3_EXPERIMENT_TRACKING.md  P2_4_OPTIMIZER_MODE.md  P2_5_CONSTRAINED_OPTIMIZER.md  P2_6_COST_AWARE_OPTIMIZER.md  P2_7_FEASIBILITY_AND_DIAGNOSTICS.md  P2_8_DIAGONAL_RISK.md  P2_9_FACTOR_RISK_MODEL.md  P2_IMPLEMENTATION.md  PERFECT_UPDATE.md
examples/: README.md  borrow_rates.csv  hard_to_borrow.csv
src/agent/: __init__.py  graph.py  state.py
tests/: conftest.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_alpha_allocation.py  test_alpha_allocation_regime.py  test_alpha_allocation_regime_tuning.py  test_alpha_eval.py  test_alpha_selection_report.py  test_dsl.py  (+23 more)
(+53 files in other folders)
