[project]
name = "agent"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.8",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.55.0",
    "langchain-openai>=0.2.9",
    "tiktoken>=0.8.0",
    "sqlalchemy>=2.0.0",
]


[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "psycopg2-binary>=2.9.5",
    "alembic>=1.10.0",
]
parquet = [
    "pyarrow>=12.0.0",
]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "langsmith>=0.1.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
